[tool.poetry]
name = "electricity-bill-calculator"
version = "0.1.0"
description = "Electricity bill calculator for TNEB"
authors = ["Siddhesh Agarwal <siddhesh.agarwal@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.9.0"

[tool.poetry.dev-dependencies]
streamlit = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
